WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284875
[WPE][Debug][GStreamer] Crash in fast/mediastream/mediastreamtrack-video-clone.html
https://bugs.webkit.org/show_bug.cgi?id=284875
Summary
[WPE][Debug][GStreamer] Crash in fast/mediastream/mediastreamtrack-video-clon...
Philippe Normand
Reported
2024-12-18 03:10:38 PST
Thread 1 (Thread 0x7f0b1affd6c0 (LWP 1752924)): #0 _g_log_abort (breakpoint=<optimized out>) at ../glib/gmessages.c:426 #1 g_logv (log_domain=0x7f0be82c9b31 "GStreamer", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7f0b1affc490) at ../glib/gmessages.c:1273 #2 0x00007f0be843f2e3 in g_log (log_domain=<optimized out>, log_level=<optimized out>, format=<optimized out>) at ../glib/gmessages.c:1315 #3 0x00007f0be823019a in gst_mini_object_make_writable (mini_object=0x0) at ../gstreamer/subprojects/gstreamer/gst/gstminiobject.c:434 #4 0x00007f0bfadf4198 in webkitMediaStreamSrcPadProbeCb (pad=0x2dee4d30 [GstPad|src], info=0x7f0b1affc7f0, data=0x7f0bcd8e4ce0) at /var/home/phil/WebKit/Source/WebCore/platform/mediastream/gstreamer/GStreamerMe diaStreamSource.cpp:1086 #5 0x00007f0be82318b5 in probe_hook_marshal (hook=0x2d946830, data=0x7f0b1affc6e0) at ../gstreamer/subprojects/gstreamer/gst/gstpad.c:3695 #6 0x00007f0be8428967 in g_hook_list_marshal (hook_list=0x2dee4dc8, may_recurse=1, marshaller=0x7f0be82315f0 <probe_hook_marshal>, data=0x7f0b1affc6e0) at ../glib/ghook.c:664 #7 0x00007f0be8230fde in do_probe_callbacks (pad=pad@entry=0x2dee4d30 [GstPad|src], info=<optimized out>, defaultval=defaultval@entry=GST_FLOW_OK) at ../gstreamer/subprojects/gstreamer/gst/gstpad.c:3879 #8 0x00007f0be8234e1c in gst_pad_push_event_unchecked (pad=pad@entry=0x2dee4d30 [GstPad|src], event=0x7f0818002cb0, type=type@entry=GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM) at ../gstreamer/subprojects/gstreamer/gst /gstpad.c:5569 #9 0x00007f0be8235458 in push_sticky (pad=pad@entry=0x2dee4d30 [GstPad|src], ev=ev@entry=0x7f0b1affc8e0, user_data=user_data@entry=0x7f0b1affc940) at ../gstreamer/subprojects/gstreamer/gst/gstpad.c:4083 #10 0x00007f0be82328d8 in events_foreach (pad=pad@entry=0x2dee4d30 [GstPad|src], func=func@entry=0x7f0be82353b0 <push_sticky>, user_data=user_data@entry=0x7f0b1affc940) at ../gstreamer/subprojects/gstreamer/gst/ gstpad.c:613 #11 0x00007f0be823ea18 in check_sticky (pad=0x2dee4d30 [GstPad|src], event=0x7f0818002cb0) at ../gstreamer/subprojects/gstreamer/gst/gstpad.c:4142 #12 gst_pad_push_event (pad=0x2dee4d30 [GstPad|src], event=event@entry=0x7f0818002cb0) at ../gstreamer/subprojects/gstreamer/gst/gstpad.c:5748 #13 0x00007f0be41c6c70 in gst_base_src_send_stream_start (src=src@entry=0x2dc27ac0 [GstBaseSrc|videosrc8]) at ../gstreamer/subprojects/gstreamer/libs/gst/base/gstbasesrc.c:992 #14 0x00007f0be41c8960 in gst_base_src_send_stream_start (src=0x2dc27ac0 [GstBaseSrc|videosrc8]) at ../gstreamer/subprojects/gstreamer/libs/gst/base/gstbasesrc.c:3157 #15 gst_base_src_loop (pad=0x2dee4d30 [GstPad|src]) at ../gstreamer/subprojects/gstreamer/libs/gst/base/gstbasesrc.c:2907 #16 0x00007f0be826c922 in gst_task_func (task=0x2d9470b0 [GstTask|videosrc8:src]) at ../gstreamer/subprojects/gstreamer/gst/gsttask.c:399 #17 0x00007f0be846d562 in g_thread_pool_thread_proxy (data=<optimized out>) at ../glib/gthreadpool.c:336 #18 0x00007f0be846bd43 in g_thread_proxy (data=0x7f0b6c002310) at ../glib/gthread.c:892 #19 0x00007f0be7cb9cd7 in start_thread (arg=<optimized out>) at pthread_create.c:448 #20 0x00007f0be7d3dc8c in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78 STDERR: (WPEWebProcess:1752587): GStreamer-CRITICAL **: 03:01:05.915: gst_mini_object_make_writable: assertion 'mini_object != NULL' failed
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-12-18 03:22:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38131
EWS
Comment 2
2024-12-19 00:32:44 PST
Committed
288077@main
(7a479138ea4c): <
https://commits.webkit.org/288077@main
> Reviewed commits have been landed. Closing PR #38131 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-12-19 00:37:53 PST
<
rdar://problem/141738280
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug