[WPE][Debug][GStreamer] Crash in fast/mediastream/mediastreamtrack-video-clone.html https://bugs.webkit.org/show_bug.cgi?id=284875

Reviewed by Xabier Rodriguez-Calvar.

* Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
(webkitMediaStreamSrcPadProbeCb): Replace the stream-start event only if the replacement is valid.

Canonical link: https://commits.webkit.org/288077@main